fix: change spacing of profile drop down

--- a/index.css
+++ b/index.css
@@ -42,19 +42,19 @@ body {
 }
 
 select {
+  appearance: none;
   background-color: transparent;
   border: none;
   color: var(--text-primary);
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 14px;
   outline: none;
-  padding: 0.5rem 1rem;
-  width: 90px;
+  text-align: center;
+  width: 100%;
 }
 
-select option {
+select>option {
   color: var(--text-primary);
-  width: 10;
 }
 
 select:focus {
@@ -80,7 +80,6 @@ label {
 }
 
 input,
-select,
 textarea {
   border-radius: 5px;
   font-size: 12px;
@@ -120,12 +119,8 @@ textarea {
 }
 
 .select-icon {
-  height: 15px;
-  width: 15px;
-}
-
-.drop-down-options {
-  background-color: #1c1f6e;
+  height: 25px;
+  width: 25px;
 }
 
 .nav-links {
@@ -145,8 +140,8 @@ textarea {
 
 .profile-image {
   border-radius: 50px;
-  height: 3rem;
-  width: auto;
+  height: 25px;
+  width: 25px;
 }
 
 .horizontal-padding {
